@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-09T16:24:23Z",
+  "timestamp" : "2022-10-10T01:50:57Z",
   "count_outdated" : 572,
   "uniques_outdated" : 329,
-  "count" : 593,
+  "count" : 594,
   "uniques" : 340,
   "clones" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-10-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
