@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 5,
   "clones": [
     {
@@ -39,7 +39,7 @@
     },
     {
       "timestamp": "2022-10-09T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
