@@ -1,3 +1,11 @@
+2022-10-10T01:50:57Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3216378734
+* notice: last 14d: unq all: 5 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 329 572 / 340 593
+* notice: next accum: outdated-unq outdated-all / unq all: 329 572 / 340 594
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-10-09]
+
 2022-10-09T16:24:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3214787918
 * notice: last 14d: unq all: 5 21
